--- a/app/build.gradle
+++ b/app/build.gradle
@@ -9,6 +9,8 @@ plugins {
 dependencies {
     implementation 'org.apache.commons:commons-text'
     implementation project(':utilities')
+    implementation  'com.thoughtworks.xstream:xstream:1.4.7'
+    testImplementation 'junit:junit:4.2'
 }
 
 application {
